<resources>
    <string name="app_name">TestForSoftDC</string>
    <string name="why_did_you_exit_your_workout">Why did you exit your workout?</string>
    <string name="text_continue">Continue</string>
    <string name="it_s_too_hard_for_me">It`s too hard for me</string>
    <string name="it_s_not_interesting">It`s not interesting</string>
    <string name="i_don_t_have_time">I don`t have time</string>
    <string name="workout_complete">Workout Complete!</string>
    <string name="duration_00_05_59">Duration 00:05:59</string>
    <string name="it_was_too_easy">It was too easy</string>
    <string name="great_workout">Great workout!</string>
    <string name="_75_workouts">75 workouts</string>
    <string name="keep_fit">Keep Fit</string>
    <string name="jump_rope">Jump rope</string>
    <string name="_10_min">10 min</string>
    <string name="_2_min">2 min</string>
    <string name="intermediate_cardio_set_1">Intermediate Cardio Set 1</string>
    <string name="get_ready">Get Ready?</string>
    <string name="_3">3</string>
    <string name="_01_23">01:23</string>
    <string name="_00_22">00:22</string>
    <string name="kettlebell_swing_with_a_change_of_hands">Kettlebell swing with a change of hands</string>
    <string name="rest_time">Rest Time</string>
    <string name="personal_setting">Personal Setting</string>
    <string name="account">Account</string>
    <string name="workout_setting">Workout Setting</string>
    <string name="training_setting">Training Setting</string>
    <string name="privacy_polity">Privacy Polity</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="version_1_01_01">Version 1.01.01</string>
    <string name="plan">Plan</string>
    <string name="exercise">Exercise</string>
    <string name="workouts">Workouts</string>
    <string name="diets">Diets</string>
    <string name="name">Name</string>
    <string name="john">John</string>
    <string name="gender">Gender</string>
    <string name="man">Man</string>
    <string name="age">Age</string>
    <string name="_31">31</string>
    <string name="height">Height</string>
    <string name="_180_cm">180 cm</string>
    <string name="weight">Weight</string>
    <string name="_83_5_kg">83,5 kg</string>
    <string name="body_type">Body type</string>
    <string name="ectomorph">Ectomorph</string>
    <string name="clear_app_cash">Clear App Cash</string>
    <string name="training_goal">Training Goal</string>
    <string name="weight_loss">Weight loss</string>
    <string name="fitness_level">Fitness level</string>
    <string name="middle">Middle</string>
    <string name="desired_weight">Desired weight</string>
    <string name="_78_5_kg">78,5 kg</string>
    <string name="training_location">Training location</string>
    <string name="in_gym">In gym</string>
    <string name="activity_level">Activity level</string>
    <string name="average_activity">Average activity</string>
    <string name="training_zone">Training zone</string>
    <string name="arms_chest">Arms, Chest</string>
    <string name="subscription_terms">Subscription terms</string>
    <string name="text_test_in_account_info_page">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
</resources>