<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/main_activity_image_view_background_the_top_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/rectangle109" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_activity_button_back_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:background="@color/transparent"
        app:icon="@drawable/icon_back"
        app:layout_constraintStart_toStartOf="@id/main_activity_image_view_background_the_top_screen"
        app:layout_constraintTop_toTopOf="@id/main_activity_image_view_background_the_top_screen" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/main_activity_image_view_main_drawing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/main_activity_button_back_to"
        app:srcCompat="@drawable/group_252" />

    <TextView
        android:id="@+id/main_activity_text_view_main_screen_text"
        style="@style/StyleMainTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/why_did_you_exit_your_workout"
        app:layout_constraintBottom_toBottomOf="@id/main_activity_image_view_background_the_top_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_activity_image_view_main_drawing" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_activity_button_continue"
        style="@style/StyleBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_activity_button_hard_for_me"
        style="@style/StyleGroupBnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/it_s_too_hard_for_me"
        app:icon="@drawable/resource323111"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_button_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_button_not_interesting" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_activity_button_not_interesting"
        style="@style/StyleGroupBnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/it_s_not_interesting"
        app:icon="@drawable/resource22311"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_button_hard_for_me"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_button_don_t_time" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/main_activity_button_don_t_time"
        style="@style/StyleGroupBnt.HardBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_don_t_have_time"
        app:icon="@drawable/resource12311"
        app:layout_constraintBottom_toTopOf="@+id/main_activity_button_not_interesting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_activity_image_view_background_the_top_screen" />
</androidx.constraintlayout.widget.ConstraintLayout>