<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/feedback_complete_fr_iv_img_bg_exit_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_bg_exit_screen" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/feedback_complete_fr_iv_main_drawing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/feedback_complete_fr_tv_main_screen_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/resource_image_comlete_image" />

    <TextView
        android:id="@+id/feedback_complete_fr_tv_main_screen_text"
        style="@style/StyleMainTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/workout_complete"
        app:layout_constraintBottom_toTopOf="@id/feedback_complete_fr_tv_timer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback_complete_fr_iv_main_drawing" />

    <TextView
        android:id="@+id/feedback_complete_fr_tv_timer"
        android:layout_width="118dp"
        android:layout_height="24dp"
        android:background="@drawable/feedback_complete_bg_timer"
        android:gravity="center"
        android:text="@string/duration_00_05_59"
        android:textSize="@dimen/text_size_timer"
        app:layout_constraintBottom_toBottomOf="@+id/feedback_complete_fr_iv_img_bg_exit_screen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback_complete_fr_tv_main_screen_text" />

    <TextView
        android:id="@+id/feedback_complete_btn_easy"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/bg_btn_default"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/it_was_too_easy"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/resource_image_ok"
        app:layout_constraintBottom_toTopOf="@+id/feedback_complete_btn_great_workout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_complete_fr_iv_img_bg_exit_screen"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/feedback_complete_btn_great_workout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/bg_btn_gray1"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/great_workout"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/resource_image_muscle"
        app:layout_constraintBottom_toTopOf="@+id/feedback_complete_btn_hard"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_complete_btn_easy"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/feedback_complete_btn_hard"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="60dp"
        android:background="@drawable/bg_btn_gray1"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/it_s_too_hard_for_me"
        android:textSize="18sp"
        android:textStyle="bold"
        app:drawableStartCompat="@drawable/resource_image_dislike"
        app:layout_constraintBottom_toTopOf="@+id/feedback_complete_btn_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/feedback_complete_btn_great_workout"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/feedback_complete_btn_continue"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="16dp"
        android:background="@drawable/bg_btn_default"
        android:fontFamily="@font/univia_pro_italic"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:text="@string/text_continue"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="UnusedAttribute" />
</androidx.constraintlayout.widget.ConstraintLayout>